crates/pg_syntax/tests/snapshots/postgres_regress/date@80.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT date 'January 8, 99 BC';"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..31
    Ident@7..11 "date"
    Whitespace@11..12 " "
    TypeCast@12..31
      AConst@12..30
        Sconst@12..30 "'January 8, 99 BC'"
      Ascii59@30..31 ";"

